# python_cloud_api_demo

./: Dockerfile  LICENSE  README.md  pyproject.toml
assets/: index.html
src/: image_handling.py  main.py
